<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="app_theme_str">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="text_support">Написать в поддержку</string>
    <string name="terms_of_use">Пользовательское соглашение</string>
    <string name="terms_of_use_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="developers_email">saa-aka-mr.blonde@yandex.ru</string>
    <string name="message_to_developers">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="thanks_to_developers">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="android_course_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="error">Ошибка¯|_(ツ)_|¯</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="connection_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="clear_history">Очистить историю</string>
    <string name="searched_for">Вы искали</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="no_time">00:00</string>
    <string name="media">Медиатека</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_lists_created">Вы не создали\nни одного плейлиста</string>
    <string name="fav_tracks">Избранные треки</string>
    <string name="playlist">Плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="description">Описание</string>
    <string name="track_count">%s</string>
    <string name="create">создать</string>
    <string name="created">создан</string>
    <string name="playlist_created">Плейлист «%s» создан</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="ask_to_cancel">Завершить создание плейлиста?</string>
    <string name="confirm_cancel">Все несохраненные данные могут быть потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="track_is_in_pl_already">Трек уже добавлен в плейлист</string>
    <string name="read_image_rationale">Необходимо разрешение для чтения файлов из общего хранилища</string>
    <string name="track_added_to_pl">Добавлено в плейлист</string>


    <string name="option_one_for_one_track">трек</string>
    <string name="option_two_for_one_track">трека</string>
    <string name="option_one_for_many_tracks">треков</string>
    <string name="option_one_for_minutes">минута</string>
    <string name="option_two_for_minutes">минуты</string>
    <string name="option_three_for_minutes">минут</string>
    <string name="no_tracks">В плейлисте нет треков</string>
    <string name="message_about_delete_track">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="message_about_delete_playlist">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="title_del_track_dialog">Удалить трек</string>
    <string name="title_del_playlist_dialog">Удалить плейлист</string>
    <string name="positive_playlist_dialog">Удалить</string>
    <string name="message_no_tracks_in_playlist">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="error_add_playlist">Error additing data in database, or commands is not allowed!</string>
    <string name="error_match_playlist">Error, operation \'match\' impossible!</string>
    <string name="image_not_select">Image not select</string>
    <string name="permission_denied">Permission to access the storage is denied.</string>
    <string name="error_init_playlist">Error initialized playlist.Check Db work.</string>
    <string name="error_query_db">Error query in database.Please check chains methods work correct with database.</string>
    <string name="cancel_playlist_dialog">Отмена</string>
    <string name="description_poster_player">Изображение трека</string>
    <string name="description_img_playlist">Изображение плейлиста</string>
    <string name="description_placeholder">Изоборажение-заглушка.</string>
    <string name="description_button_add">Добавить трек плейлист</string>
    <string name="description_button_play">Играть</string>
    <string name="description_button_heart">Добавить трек в любимые</string>
    <string name="playlist_share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="rationale_permission_on_storage">Данное разрешения необходимо для добавления картинки к плейлисту</string>
</resources>