<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingStart="17dp"
    android:paddingTop="@dimen/padding_14"
    android:paddingEnd="15dp"
    android:paddingBottom="28dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_22" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/search_btn_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_22"
            app:cornerRadius="@dimen/corner_radius_16"
            app:icon="@drawable/ic_search"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_10"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/media_library_btn_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/media_library"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_22"
            app:cornerRadius="@dimen/corner_radius_16"
            app:icon="@drawable/ic_media_library"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_10"
            app:iconTint="@color/black" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/settings_btn_main"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/settings"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_22"
            app:cornerRadius="@dimen/corner_radius_16"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/padding_10"
            app:iconTint="@color/black" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>