<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/padding_16"
    android:paddingTop="@dimen/padding_14"
    android:paddingEnd="@dimen/zero_dp">

    <LinearLayout
        android:id="@+id/settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:gravity="end"
        android:paddingStart="@dimen/zero_dp"
        android:paddingEnd="186dp"
        android:paddingBottom="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_imageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/ic_arrow_back"
             />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:paddingStart="28sp"
            android:paddingEnd="18dp"
            android:text="@string/settings"
            android:textColor="@color/deep_black"
            android:textSize="@dimen/text_22" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/theme_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/settings_item_padding"
        app:layout_constraintTop_toBottomOf="@id/settings_title">

        <TextView
            android:id="@+id/theme_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_theme_str"
            android:textColor="@color/deep_black"
            android:textSize="@dimen/text_16" />

        <ToggleButton
            android:layout_width="56dp"
            android:layout_height="40dp"
            android:background="@drawable/custom_toggle_button"
            android:textOff=""
            android:textOn="" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/zero_dp"
        android:paddingEnd="@dimen/padding_16"
        android:paddingBottom="@dimen/settings_item_padding"
        app:layout_constraintTop_toBottomOf="@id/theme_ll">

        <TextView
            android:id="@+id/share_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            android:textColor="@color/deep_black"
            android:textSize="@dimen/text_16" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_share"
            android:contentDescription="@string/share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/support_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/zero_dp"
        android:paddingEnd="@dimen/padding_14"
        android:paddingBottom="@dimen/settings_item_padding"
        app:layout_constraintTop_toBottomOf="@id/share_ll">

        <TextView
            android:id="@+id/support_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_support"
            android:textColor="@color/deep_black"
            android:textSize="@dimen/text_16" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_support"
            android:contentDescription="@string/share" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/zero_dp"
        android:paddingEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/support_ll">

        <TextView
            android:id="@+id/terms_of_use_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/terms_of_use"
            android:textColor="@color/deep_black"
            android:textSize="@dimen/text_16" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow"
            android:contentDescription="@string/share" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>