<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".searchscreen.ui.fragments.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/padding_14">

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingStart="@dimen/padding_16"
            android:text="@string/search" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_36"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_24"
        android:layout_marginEnd="@dimen/margin_16"
        android:background="@drawable/search_edit_text_background"
        android:paddingStart="@dimen/padding_13">

        <EditText
            android:id="@+id/et_search"
            style="@style/searchEditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignEnd="@+id/iv_clear"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:background="@android:color/transparent"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/margin_15"
            android:src="@drawable/ic_clear"
            android:visibility="gone" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_tracks"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_24"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <ProgressBar
        android:id="@+id/pb_search"
        android:layout_width="@dimen/circular_progress_indicator_size"
        android:layout_height="@dimen/circular_progress_indicator_size"
        android:layout_gravity="center"
        android:layout_marginTop="148dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/ll_search_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_32"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_18"
            android:layout_marginBottom="@dimen/margin_20"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/searched_for"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_19" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:reverseLayout="true"
            app:stackFromEnd="true" />

        <Button
            android:id="@+id/btn_clear_history"
            style="@style/searchActivityBtnStyle"
            android:layout_marginBottom="@dimen/margin_20"
            android:text="@string/clear_history"
            app:backgroundTint="?attr/colorOnPrimary"
            app:cornerRadius="@dimen/round_btn_corners" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="113dp"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/iv_error"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="312dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/margin_24"
            android:layout_marginTop="@dimen/margin_20"
            android:fontFamily="@font/ys_display_medium"
            android:textAlignment="center"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="@dimen/text_19" />

        <Button
            android:id="@+id/btn_update"
            style="@style/searchActivityBtnStyle"
            android:text="@string/update"
            app:backgroundTint="?attr/colorOnPrimary"
            app:cornerRadius="@dimen/round_btn_corners" />
    </LinearLayout>
</LinearLayout>
