<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_playlist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightest_grey"
    android:orientation="vertical"
    tools:context=".playlist.ui.fragments.PlaylistTracksFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_pl"
            android:layout_width="290dp"
            android:layout_height="290dp"
            android:layout_margin="30dp"
            android:contentDescription="@string/description_img_playlist"
            android:src="@drawable/add_playlist_holder"
            app:layout_constraintBottom_toTopOf="@+id/name_pl"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/placeholder" />

        <Button
            android:id="@+id/back_button_new_playlist"
            style="@style/StyleBackButton"
            android:backgroundTint="#00000000"
            app:iconTint="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border_16_pl"
            style="@style/PlayerGuideLine"
            app:layout_constraintGuide_begin="@dimen/before_item" />

        <TextView
            android:id="@+id/name_pl"
            style="@style/TextPlaylistBig"
            app:layout_constraintStart_toStartOf="@id/left_border_16_pl"
            app:layout_constraintTop_toBottomOf="@id/image_pl"
            tools:text="Best songs" />

        <TextView
            android:id="@+id/description_pl"
            style="@style/TextPlaylistSmall"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintStart_toStartOf="@id/left_border_16_pl"
            app:layout_constraintTop_toBottomOf="@+id/name_pl"
            tools:text="2023" />

        <TextView
            android:id="@+id/time_length_pl"
            style="@style/TextPlaylistSmall"
            android:layout_marginTop="@dimen/margin_8"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintStart_toStartOf="@id/left_border_16_pl"
            app:layout_constraintTop_toBottomOf="@+id/description_pl"
            tools:text="300 минут" />

        <ImageView
            android:id="@+id/point_pl"
            style="@style/ImagePointInTracksRecycler"
            android:layout_width="3dp"
            android:layout_height="3dp"
            android:layout_marginHorizontal="@dimen/size_5"
            android:layout_marginTop="17dp"
            app:layout_constraintStart_toEndOf="@id/time_length_pl"
            app:layout_constraintTop_toBottomOf="@+id/description_pl"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tracks_counter_pl"
            style="@style/TextPlaylistSmall"
            android:layout_marginStart="@dimen/size_5"
            android:layout_marginTop="@dimen/item_marginTop_veryLow"
            android:fontFamily="@font/ys_display_regular"
            app:layout_constraintStart_toEndOf="@id/point_pl"
            app:layout_constraintTop_toBottomOf="@+id/description_pl"
            tools:text="97 треков" />

        <ImageView
            android:id="@+id/share_pl"
            style="@style/IconPlaylist"
            android:src="@drawable/links_24x24"
            app:layout_constraintStart_toStartOf="@id/left_border_16_pl"
            app:layout_constraintTop_toBottomOf="@id/time_length_pl" />

        <ImageView
            android:id="@+id/menu_pl"
            style="@style/IconPlaylist"
            android:layout_marginStart="@dimen/before_item"
            android:src="@drawable/menu_points"
            app:layout_constraintStart_toEndOf="@id/share_pl"
            app:layout_constraintTop_toBottomOf="@id/time_length_pl" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/bottom_sheet_playlist_tracks"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/bottom_sheet_shape"
        android:orientation="vertical"
        app:behavior_hideable="false"
        app:behavior_peekHeight="200dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View style="@style/BottomSheetHandle" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_playlist_tracks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:itemCount="4"
            tools:listitem="@layout/track_item" />

        <TextView
            android:id="@+id/empty_pl"
            style="@style/TextPlaylistSmall"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_top_medium"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/no_tracks"
            android:textSize="@dimen/pl_text"
            android:visibility="gone"
            tools:text="В плейлисте нет треков" />

    </LinearLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#99000000"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottom_sheet_playlist_menu"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:background="@drawable/bottom_sheet_shape"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_8"
        app:behavior_hideable="true"
        app:behavior_peekHeight="380dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        tools:visibility="gone">

        <View style="@style/BottomSheetHandle" />

        <LinearLayout style="@style/RootLayoutTracksRecycler">

            <ImageView
                android:id="@+id/image_playlist_menu"
                style="@style/ImageInTracksRecycler"
                tools:src="@drawable/placeholder" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name_playlist_menu"
                    style="@style/TrackNameInTracksRecycler"
                    tools:text="My loved songs" />

                <TextView
                    android:id="@+id/counter_tracks_menu"
                    style="@style/ArtistNameInTracksRecycler"
                    tools:text="140 треков" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/playlist_share"
            style="@style/StyleMenuButton"
            android:text="@string/playlist_share" />

        <Button
            android:id="@+id/playlist_edit_info"
            style="@style/StyleMenuButton"
            android:text="@string/edit_info" />

        <Button
            android:id="@+id/delete_playlist"
            style="@style/StyleMenuButton"
            android:text="@string/delete_playlist" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>